# LSM6DSOX-Kalman-Filter

./: Cargo.toml  Embed.toml  README.md  openocd.gdb
.cargo/: config.toml
src/: kalman.rs  main.rs
