[package]
authors = ["Kavin Gnanapandithan <kavin.balag@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "lsm6dsox_driver"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.0"
cortex-m-rt = "0.7.3"
embedded-hal = "0.2.7"
libm = "0.2.8"
nb = "1.1.0"
panic-halt = "0.2.0"
rtt-target = "0.4.0"
lsm6dsox_driver = {git = "https://github.com/KavinTheG/LSM6DSOX-Embedded-Rust-Driver.git"}

[dependencies.stm32f4xx-hal]
version = "0.17.1"
features = ["stm32f411", "rt"] # replace the model of your microcontroller here
                         # and add other required features

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.4.0"


# this lets you use `cargo fix`!
[[bin]]
name = "lsm6dsox_driver"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
