[package]
authors = ["Kavin Gnanapandithan <kavin.balag@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "lsm6dsox_driver"
version = "0.1.0"

[dependencies]
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.1"
panic-halt = "0.2.0"
rtic = {version = "2.0.1", features = [ "thumbv7-backend" ] }
rtic-monotonics = {version = "1.0.0", features = [ "cortex-m-systick" ] }
rtic-sync = "1.0.2"

libm = "0.2.8"
rtt-target = "0.4.0"
lsm6dsox_driver = {git = "https://github.com/KavinTheG/LSM6DSOX-Embedded-Rust-Driver.git"}
heapless = "0.8.0"
[dependencies.stm32f4xx-hal]
version = "0.20.0"
features = ["stm32f411"]


# this lets you use `cargo fix`!
[[bin]]
name = "lsm6dsox_driver"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
